# synthesizability

./: LICENSE  README.md  environment.yaml  setup.cfg
references/2009/: 20090610_ertl_p_and_schuffenhauer_a.md
references/2018/: 20180108_coley_c_w_et_al.md
references/2020/: 20200520_vorsilak_colar_cmelo_and_svozil.md
references/2021/: 20210307_thakkar_chadimova_bjerrum_engkvist_reymond.md
references/2022/: 20220203_li_and_chen.md  20220422_liu_korablyov_jastrzebski_pruszynski_bengio_segler.md  20220608_yu_wang_zhao_gao_kang_cao_wang_hou.md
references/2023/: 20230114_skoraczynski_kitlas_miasojedow_gambin.md  20230831_kim_lee_kim_lim_kim.md  20230919_parrot_tajmouati-dasilva_atwood_fourcade_mathe_huu_perron.md  20231102_s.wang_l.wang_li_bai.md
references/2024/: 20240520_raghavan_rago_verma_hassan_goshu_dombrowski_pandey_coley_wang.md  20240723_chen_jung.md  20241018_neeser_correia_schwaller.md
synthesizability/: __init__.py
