[metadata]
name = synthesizability
version = 2025.1.1-alpha
author = Haris Hasic
description = The computer-assisted synthesizability research project.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = file: LICENSE
keywords =
    chemoinformatics,
    synthesizability,
    synthetic-accessibility,
    synthetic-complexity,
    synthetic-feasibility

[options]
packages = find:

[options.packages.find]
include =
    synthesizability
exclude =
    references
